--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,6 @@ build-backend = "poetry.core.masonry.api"
 non4dstem = "project_chameleon.nonfourdimension_stem.non4dstem:main"
 stemarray4d = "project_chameleon.fourdimension_stem.stemarray4d:main"
 mbeparser = "project_chameleon.MBE.mbeparser:main"
-ppmsmpms = "project_chameleon.ppms-mpms.ppmsmpms:main"
+ppmsmpms = "project_chameleon.ppmsmpms.ppmsmpms:main"
 rheed = "project_chameleon.RHEED.rheedconverter:main"
 brukerraw = "project_chameleon.XRD.BrukerRAW.brukerrawconverter:main"
