--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ hyperspy = "^2.1.0"
 py4DSTEM = "^0.14.15"
 xylib-py = "^1.6.1"
 pandas = "^2.2.2"
+sphinx_rtd_theme = "^1.0.0"
 
 
 [build-system]
