--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  install:
+    - requirements: pyproject.toml
    
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
