--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+sphinx = "^8.1.3"
 matplotlib = "^3.9.0"
 numpy = "^1.26.4"
 hyperspy = "^2.1.0"
