--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,17 +2,21 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
-# Set the OS, Python version and other tools you might need
+# Set the OS, Python version, and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+
+# Install dependencies from pyproject.toml (or requirements.txt if preferred)
+python:
   install:
-    - requirements: pyproject.toml
-   
+    - path: .  # Install dependencies from the current directory (i.e., pyproject.toml)
+    - method: pip
+      extra_requirements: [docs]  # Optional: If you use a "docs" extra in pyproject.toml
+
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
@@ -21,10 +25,3 @@ sphinx:
 # formats:
 #    - pdf
 
-
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
