--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [build-system]
-# This section is required for pip to understand how to build the package.
-# Poetry uses poetry-core for packaging, which should be compatible with pip.
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.8,<2"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
+[project]
 name = "project-chameleon"
 version = "0.1.0"
 description = "A package for transforming and querying different file formats commonly found in material science research"
-authors = ["Peter Cauchy"]
+authors = [{name = "Peter Cauchy", email = "peter.cauchy@example.com"}]
 license = "MIT"
 readme = "README.md"
+dynamic = ["version", "description"]
 
-[tool.poetry.dependencies]
+[project.dependencies]
 python = "^3.12"
 sphinx = "^8.1.3"
 matplotlib = "^3.9.0"
@@ -23,8 +22,10 @@ xylib-py = "^1.6.1"
 pandas = "^2.2.2"
 sphinx_rtd_theme = "^1.0.0"
 
-# Exporting the package's dependencies into a requirements.txt format
-[tool.poetry.scripts]
+[project.optional-dependencies]
+docs = ["sphinx_rtd_theme"]
+
+[project.scripts]
 non4dstem = "project_chameleon.non4dstem:main"
 stemarray4d = "project_chameleon.stemarray4d:main"
 mbeparser = "project_chameleon.mbeparser:main"
@@ -32,6 +33,3 @@ ppmsmpms = "project_chameleon.ppmsmpms:main"
 rheed = "project_chameleon.rheedconverter:main"
 brukerraw = "project_chameleon.brukerrawconverter:main"
 brukerrawbackground = "project_chameleon.brukerrawbackground:main"
-
-[tool.poetry.extras]
-docs = ["sphinx_rtd_theme"]
