--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,6 +14,8 @@ build:
 python:
   install:
     - requirements: pyproject.toml  # This will install dependencies defined in pyproject.toml
+    - method: pip
+      path: .
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
