--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,26 +1,13 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 version: 2
 
-# Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.10"
 
-# Install dependencies from pyproject.toml (or requirements.txt if preferred)
 python:
   install:
-    - requirements: pyproject.toml  # This will install dependencies defined in pyproject.toml
     - method: pip
       path: .
+    - requirements: requirements.txt
 
-# Build documentation in the "docs/" directory with Sphinx
-sphinx:
-  configuration: docs/source/conf.py
-
-# Optionally build your docs in additional formats such as PDF and ePub
-# formats:
-#    - pdf
