--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,83 +1,8 @@
-beautifulsoup4==4.12.3 ; python_version >= "3.12" and python_version < "4.0"
-certifi==2024.2.2 ; python_version >= "3.12" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
-cloudpickle==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
-colorspacious==1.1.2 ; python_version >= "3.12" and python_version < "4.0"
-contourpy==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
-cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-dask==2024.5.1 ; python_version >= "3.12" and python_version < "4.0"
-dask[array]==2024.5.1 ; python_version >= "3.12" and python_version < "4.0"
-dill==0.3.8 ; python_version >= "3.12" and python_version < "4.0"
-distributed==2024.5.1 ; python_version >= "3.12" and python_version < "4.0"
-emdfile==0.0.14 ; python_version >= "3.12" and python_version < "4.0"
-filelock==3.14.0 ; python_version >= "3.12" and python_version < "4.0"
-fonttools==4.52.4 ; python_version >= "3.12" and python_version < "4.0"
-fsspec==2024.5.0 ; python_version >= "3.12" and python_version < "4.0"
-gdown==5.2.0 ; python_version >= "3.12" and python_version < "4.0"
-h5py==3.11.0 ; python_version >= "3.12" and python_version < "4.0"
-hdf5plugin==4.4.0 ; python_version >= "3.12" and python_version < "4.0"
-hyperspy==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
-idna==3.7 ; python_version >= "3.12" and python_version < "4.0"
-imageio==2.34.1 ; python_version >= "3.12" and python_version < "4.0"
-importlib-metadata==7.1.0 ; python_version >= "3.12" and python_version < "4.0"
-jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
-joblib==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
-kiwisolver==1.4.5 ; python_version >= "3.12" and python_version < "4.0"
-lazy-loader==0.4 ; python_version >= "3.12" and python_version < "4.0"
-locket==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
-markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
-matplotlib==3.9.0 ; python_version >= "3.12" and python_version < "4.0"
-mpire==2.10.2 ; python_version >= "3.12" and python_version < "4.0"
-mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-msgpack==1.0.8 ; python_version >= "3.12" and python_version < "4.0"
-natsort==8.4.0 ; python_version >= "3.12" and python_version < "4.0"
-ncempy==1.11.1 ; python_version >= "3.12" and python_version < "4.0"
-networkx==3.3 ; python_version >= "3.12" and python_version < "4.0"
-numpy==1.26.4 ; python_version >= "3.12" and python_version < "4.0"
-packaging==24.0 ; python_version >= "3.12" and python_version < "4.0"
-pandas==2.2.2 ; python_version >= "3.12" and python_version < "4.0"
-partd==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
-pillow==10.3.0 ; python_version >= "3.12" and python_version < "4.0"
-pint==0.23 ; python_version >= "3.12" and python_version < "4.0"
-platformdirs==4.2.2 ; python_version >= "3.12" and python_version < "4.0"
-pooch==1.8.1 ; python_version >= "3.12" and python_version < "4.0"
-prettytable==3.10.0 ; python_version >= "3.12" and python_version < "4.0"
-psutil==5.9.8 ; python_version >= "3.12" and python_version < "4.0"
-py4dstem==0.14.15 ; python_version >= "3.12" and python_version < "4.0"
-pyaml==24.4.0 ; python_version >= "3.12" and python_version < "4.0"
-pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
-pylops==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
-pysocks==1.7.1 ; python_version >= "3.12" and python_version < "4.0"
-python-box==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
-pytz==2024.1 ; python_version >= "3.12" and python_version < "4.0"
-pywin32==306 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
-pyyaml==6.0.1 ; python_version >= "3.12" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
-requests[socks]==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
-rosettasciio[hdf5]==0.4 ; python_version >= "3.12" and python_version < "4.0"
-scikit-image==0.23.2 ; python_version >= "3.12" and python_version < "4.0"
-scikit-learn==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
-scikit-optimize==0.10.1 ; python_version >= "3.12" and python_version < "4.0"
-scipy==1.13.1 ; python_version >= "3.12" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
-sortedcontainers==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
-soupsieve==2.5 ; python_version >= "3.12" and python_version < "4.0"
-sympy==1.12.1 ; python_version >= "3.12" and python_version < "4.0"
-tblib==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-threadpoolctl==3.5.0 ; python_version >= "3.12" and python_version < "4.0"
-tifffile==2024.5.22 ; python_version >= "3.12" and python_version < "4.0"
-toolz==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-tornado==6.4 ; python_version >= "3.12" and python_version < "4.0"
-tqdm==4.66.4 ; python_version >= "3.12" and python_version < "4.0"
-traits==6.4.3 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.0 ; python_version >= "3.12" and python_version < "4.0"
-tzdata==2024.1 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.2.1 ; python_version >= "3.12" and python_version < "4.0"
-wcwidth==0.2.13 ; python_version >= "3.12" and python_version < "4.0"
-xylib-py==1.6.1 ; python_version >= "3.12" and python_version < "4.0"
-zict==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-zipp==3.19.0 ; python_version >= "3.12" and python_version < "4.0"
+sphinx>=8.1.3
+matplotlib>=3.9.0
+numpy>=1.26.4
+hyperspy>=2.1.0
+py4DSTEM>=0.14.15
+xylib-py>=1.6.1
+pandas>=2.2.2
+sphinx-rtd-theme>=1.0.0
