--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,6 @@
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-py-modules = []
-
 [project]
 name = "project-chameleon"
 version = "0.1.0"
@@ -12,12 +9,8 @@ description = "A package for transforming and querying different file formats co
 authors = [{name = "Peter Cauchy", email = "peter.cauchy@example.com"}]
 license = {text = "MIT"}
 readme = "README.md"
-dynamic = ["version", "description"]
-
-[project.dependencies]
-# Each dependency is a string in the array
+requires-python = ">=3.12"
 dependencies = [
-    "python>=3.12",
     "sphinx>=8.1.3",
     "matplotlib>=3.9.0",
     "numpy>=1.26.4",
