--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,7 @@ python:
       path: .
     - requirements: requirements.txt
 
+  install:
+    - sudo apt-get update
+    - sudo apt-get install -y swig libboost-all-dev
+
