--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,8 +4,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-
-  install:
+  
+  before_install:
     # Install system dependencies (SWIG and Boost)
     - sudo apt-get update
     - sudo apt-get install -y swig libboost-all-dev
