--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,7 +5,7 @@ build:
   tools:
     python: "3.10"
 
-  install:
+  script:
     # Install system dependencies (SWIG and Boost)
     - sudo apt-get update
     - sudo apt-get install -y swig libboost-all-dev
