--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,10 +5,11 @@ build:
   tools:
     python: "3.10"
 
-  script:
-    # Install system dependencies (SWIG and Boost)
-    - sudo apt-get update
-    - sudo apt-get install -y swig libboost-all-dev
+  jobs:
+    pre_install:
+      # Install system dependencies (SWIG and Boost)
+      - sudo apt-get update
+      - sudo apt-get install -y swig libboost-all-dev
 
 python:
   install:
