--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,12 +1,33 @@
 version: 2
-
 build:
-  os: ubuntu-22.04
+  os: ubuntu-20.04  # Specify the desired OS version (e.g., Ubuntu 20.04)
   tools:
-    python: "3.10"
-
-python:
+    python:
+      version: 3.8  # Specify your Python version
   install:
     - method: pip
-      path: .
-    - requirements: requirements.txt
+      packages:
+        - -r requirements.txt  # Install Python dependencies from requirements.txt
+    - pip install cmake  # Install CMake if it's needed for building
+    # Install SWIG from source
+    - wget https://github.com/swig/swig/releases/download/4.1.1/swig-4.1.1.tar.gz  # Replace with latest SWIG version if necessary
+    - tar -xvzf swig-4.1.1.tar.gz
+    - cd swig-4.1.1
+    - ./configure --prefix=$HOME/.local  # Install SWIG locally
+    - make
+    - make install
+    - export PATH=$HOME/.local/bin:$PATH  # Ensure swig is in the PATH
+    - cd ..  # Go back to the original directory
+    # Install Boost from source
+    - wget https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz  # Replace with latest Boost version if necessary
+    - tar -xvzf boost_1_76_0.tar.gz
+    - cd boost_1_76_0
+    - ./bootstrap.sh --prefix=$HOME/.local  # Specify the local installation directory
+    - ./b2 install
+    - export BOOST_ROOT=$HOME/.local  # Set the BOOST_ROOT environment variable
+  jobs:
+    include:
+      - type: python
+        version: "3.8"
+        commands:
+          - make html  # Command to build the documentation (modify as needed)
