--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,7 +3,7 @@ build:
   os: ubuntu-20.04  # Specify the desired OS version (e.g., Ubuntu 20.04)
   tools:
     python:
-      version: 3.10  # Specify your Python version
+      version: "3.10"  # Specify your Python version
   install:
     - method: pip
       packages:
