--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,8 +2,7 @@ version: 2
 build:
   os: ubuntu-20.04  # Specify the desired OS version (e.g., Ubuntu 20.04)
   tools:
-    python:
-      version: "3.10"  # Specify your Python version
+    python: "3.10"  # Specify your Python version as a string (corrected)
   install:
     - method: pip
       packages:
@@ -29,4 +28,4 @@ build:
   build:
     # This is where you specify the build steps (e.g., generating HTML from your Sphinx documentation)
     commands:
-      - make html  # Command to build the documentation (modify as needed)
+      - make html  # Command to build the documentation (modify as needed
