--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,15 +6,10 @@ build:
   jobs:
     pre_install:
       - pip install cmake  # Install CMake
-      # Install SWIG from source
-      - wget https://github.com/swig/swig/releases/download/4.1.1/swig-4.1.1.tar.gz  # Replace with the latest SWIG version if necessary
-      - tar -xvzf swig-4.1.1.tar.gz
-      - cd swig-4.1.1
-      - ./configure --prefix=$HOME/.local  # Install SWIG locally
-      - make
-      - make install
-      - export PATH=$HOME/.local/bin:$PATH  # Ensure swig is in the PATH
-      - cd ..  # Go back to the original directory
+      # Install Homebrew (if necessary) and SWIG
+      - export PATH="/home/linuxbrew/.linuxbrew/bin:$PATH"  # Update the PATH for Homebrew (Linux)
+      - which brew || /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"  # Install Homebrew if it's not already installed
+      - brew install swig  # Install SWIG using Homebrew
       # Install Boost from source
       - wget https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz  # Replace with the latest Boost version if necessary
       - tar -xvzf boost_1_76_0.tar.gz
@@ -22,4 +17,3 @@ build:
       - ./bootstrap.sh --prefix=$HOME/.local  # Specify the local installation directory
       - ./b2 install
       - export BOOST_ROOT=$HOME/.local  # Set the BOOST_ROOT environment variable
-
