--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,8 @@ build:
       # Install SWIG from source
       - git clone https://github.com/swig/swig.git  # Clone SWIG repository
       - cd swig
-      - git checkout tags/rel-4.1.0 -b build-branch  # Check out a stable version
+      - git fetch --tags  # Fetch tags
+      - git checkout tags/v4.1.0 -b build-branch  # Checkout the specific version
       - sh autogen.sh  # Generate configure script
       - ./configure --prefix=$HOME/.local
       - make
