--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,4 +8,7 @@ build:
       - curl -fsSL https://ftp-master.debian.org/keys/archive-key-12.asc -o /tmp/debian-archive-keyring.asc
       - curl -fsSL https://ftp-master.debian.org/keys/archive-key-12-security.asc -o /tmp/debian-security-archive-keyring.asc
       - pip install swig boost h5py
+      - export BOOST_ROOT=$HOME/.local  # Set BOOST_ROOT environment variable
+      - export BOOST_INCLUDEDIR=$BOOST_ROOT/include  # Ensure Boost headers are found
+      - export BOOST_LIBRARYDIR=$BOOST_ROOT/lib
       - pip install -r docs/requirements.txt
