--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,9 +10,12 @@ build:
       - wget https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz -O boost_1_76_0.tar.gz
       - tar -xvzf boost_1_76_0.tar.gz
       - cd boost_1_76_0
-      - ls
+      - ./boost_1_76_0/bootstrap.sh --prefix=$HOME/.local  # Install Boost locally
+      - .boost_1_76_0/b2 install
       - export BOOST_ROOT=$HOME/.local  # Set BOOST_ROOT environment variable
       - export BOOST_INCLUDEDIR=$BOOST_ROOT/include  # Ensure Boost headers are found
       - export BOOST_LIBRARYDIR=$BOOST_ROOT/lib  # Ensure Boost libraries are found
+      - cd ..
       - pip install swig boost h5py
+
       - pip install -r docs/requirements.txt
