--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,3 +7,12 @@ xylib-py>=1.6.1
 pandas>=2.2.2
 sphinx-rtd-theme>=1.0.0
 Pillow>=2.2.1
+h5py>=2.6.0
+datetime>=
+htmdec_formats  # Custom or third-party module; specify version if known
+h5py>=2.6.0
+openpyxl>=3.0.0
+PyQt5>=5.15.0
+scipy>=1.7.0
+adjustText>=0.7.3
+
