--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,7 @@
 version: 2
+sphinx:
+  # Path to your Sphinx configuration file.
+  configuration: docs/source/conf.py
 build:
   os: ubuntu-20.04  # Specify the desired OS version (e.g., Ubuntu 20.04)
   tools:
